update dockerfile skip tests maven & update comments