@@ -8,9 +8,7 @@ COPY model /usr/src/app/model
 COPY repository /usr/src/app/repository
 COPY pom.xml /usr/src/app
 
-RUN export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
-
-RUN mvn -f /usr/src/app/pom.xml clean package
+RUN mvn -DskipTests -f /usr/src/app/pom.xml clean package
 
 FROM openjdk:14-alpine as builder
 
